[project]
name = "ClarityAI"
version = "0.1.1"
description = "The tutor agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "huggingface-hub>=1.6.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.2",
    "matplotlib>=3.10.8",
    "openai>=2.26.0",
    "psutil>=7.2.2",
    "psycopg2>=2.9.11",
    "pypdf>=6.9.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
